@@ -16,6 +16,7 @@
 * gui: #2574 fixed: do not crash Kadu after deletion of currently used chat syntax (Vogel)
 * screenshot: #2558 fixed: activate and focus screenshot window properly, handle Esc and Return keys (ultr)
 * tabs: #2005 fixed: support for alt+[0-9] shurtcuts in tabs window (mazlik)
+* build: by default compile with optimizations turned on (RelWithDebInfo instead of Debug) (beevvy)
 
 +++ version 0.12.0-beta1
 * tabs: "Close all tabs but active one" action added (Juzef)
